--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -8,5 +8,5 @@
   <%= link_to "الصفحة الشخصية", current_user %>
 </span>
 <span>
-  <%= pluralize(current_user.proverbes.count, "عدد الأمثال و الحكم") %>
+  عدد الأمثال و الحكم : <%= current_user.proverbes.count%>  
 </span>
