--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,10 +3,10 @@
     <div class="container">
       
       <nav>
-      <a class="brand" href="#pages/home">بوابة الأمثال و الحكم</a> 
+      <a class="brand" href=<%= root_path %>>بوابة الأمثال و الحكم</a> 
         <ul class="nav pull-right">
           <li><%= link_to "المساعدة", help_path %></li>
-         <li><%= link_to "تسجيل الدخول", signin_path %></li>
+         
 	
              
        <% if signed_in? %>
