--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
 <%= provide(:title, 'انشاء حساب') %>
 <h1>تسجيل الدخول</h1>
 
-
+<div class="well form-inline">
 <%= form_for @user do |f| %>
     <%= render 'shared/error_messages', :object=> f.object %>
 <div id="wrapper">
@@ -28,4 +28,5 @@
 </div>
 </div>
 <% end %>
+</div>
 </div>
