modif proverbe list

--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -11,6 +11,9 @@
     <%= link_to "حذف", feed_item, :method =>  :delete,
                                      :confirm=> "هل أنت متأكد",
                                      :title=>    feed_item.Corps %>
+
+
+   <%= link_to "تحديث المثل", edit_proverbe_path(feed_item) %>
   <% end %>
 
 </li>
