--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,6 +11,7 @@
              
        <% if signed_in? %>
             <li><%= link_to "المستخدمين", users_path %></li>
+            <li><%= link_to "كل الأمثال و الحكم", proverbes_path %></li>
             <li id="fat-menu" class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%=current_user.name%> <b class="caret"></b>
               </a>
