--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,7 @@
     </section>
   </aside>
   <div class="span8">
+     <%= render 'follow_form' if signed_in? %>
     <% if @user.proverbes.any? %>
       <h3> الأمثال   (<%= @user.proverbes.count %>)</h3>
       <ol class="microposts">
