--- a/app/views/proverbes/index.html.erb
+++ b/app/views/proverbes/index.html.erb
@@ -1,4 +1,4 @@
-<h1>جميع المستخدمبن</h1>
+<h1>كل الأمثال و الحكم</h1>
 
 <%= will_paginate :previous_label => 'السابق', :next_label => 'التالي', :class => 'pager' %>
 
@@ -7,7 +7,7 @@
     <li>
       
         <span class="user">
-    		<%= link_to proverbe.user.name %>
+    		<%= link_to proverbe.user.name, proverbe.user  %>
         </span>
     <span class="corps"><%= proverbe.Corps %></span>
   <span class="timestamp">
