--- a/app/views/proverbes/edit.html.erb
+++ b/app/views/proverbes/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>تحديث الحساب</h1>
+<h1>تحديث المثل</h1>
 
 <div class="row">
   <div class="span6 offset3">
@@ -15,5 +15,5 @@
   </div>
 </div>
 
-<%= link_to 'Show', @proverbe %> |
-<%= link_to 'Back', root_path %>
+<%= link_to 'المثل', @proverbe %> |
+<%= link_to 'الرئيسية', root_path %>
