--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -489,5 +489,10 @@ button.btn.small, input[type="submit"].btn.small {
   .gravatar {
     margin: 1px 1px;
   }
+
+.disqus-count-text { display: none; }
+
+
+
 }
 
