--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,6 +1,8 @@
 <% if @feed_items.any? %>
-  <ol class="proverbes">
+<div class="row">
+<ul class="users">
     <%= render :partial=> 'shared/feed_item', :collection=> @feed_items %>
-  </ol>
+</ul>
+</div>
   <%= will_paginate @feed_items %>
 <% end %>
