--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -552,14 +552,51 @@ footer ul li {
 .users {
   list-style: none;
   margin: 0;
+  cursor: pointer; 
   li {
     overflow: auto;
     padding: 10px 0;
     border-top: 1px solid $grayLighter;
     &:last-child {
       border-bottom: 1px solid $grayLighter
-    }
+    }  
   }
+}
+
+
+.userstopdetail{
+
+margin-bottom: 5px;
+overflow: hidden;
+
+}
+
+.userstopdetailfeed{
+
+margin-bottom: 3px;
+overflow: hidden;
+
+}
+.user {
+   float: right; 
+  font: bold 16px Arial, Helvetica, sans-serif;
+  color: #666;
+  display: block;
+  padding-right: 1px;    
+
+  }
+
+.timestamp {
+font: normal 10.5px Tahoma, Geneva, sans-serif;
+color: #AEAEAE;
+float: left;
+padding-right: 18px;
+overflow: hidden;
+display: block;
+padding-top: 3px;
+padding-bottom: 3px;
+margin-left: 7px;
+
 }
 
 
@@ -579,6 +616,9 @@ overflow: hidden;
 
 .corps {
   display: block;
+  font-size: medium;
+  text-align: right; 
+  
 }
 .timestamp {
   color: $grayLight;
