--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -1,13 +1,18 @@
 <li id="<%= feed_item.id %>">
-  
+<div class="userstopdetailfeed">  
   <span class="user">
-    <%= link_to feed_item.user.name %>
+    <%= link_to feed_item.user.username %>
   </span>
-  <span class="corps"><%= feed_item.Corps %></span>
+
   <span class="timestamp">
     أرسل من حوالي <%= time_ago_in_words(feed_item.created_at)%>.
-  </span>
-   <% if current_user?(feed_item.user) %>
+  </span> 
+
+</div>
+  
+  <p class="corps"><%= feed_item.Corps %></p>
+  
+   <% if current_user = feed_item.user %>
     <%= link_to "حذف", feed_item, :method =>  :delete,
                                      :confirm=> "هل أنت متأكد",
                                      :title=>    feed_item.Corps %>
