--- a/app/views/proverbes/index.html.erb
+++ b/app/views/proverbes/index.html.erb
@@ -10,7 +10,7 @@
  <div class="modal hide fade" id="<%= proverbe.user.username %>">
   <div class="modal-header">
     <button class="close" data-dismiss="modal"> × </button>
-    <h2> <%= link_to proverbe.user.username,  proverbe.user%> </h2>
+    <h2> <%= link_to proverbe.user.name,  proverbe.user%> </h2>
   </div>
 
  <div class="modal-body">
@@ -26,14 +26,10 @@
    <% end %> 
  </div>
 
-  <div class="modal-footer">
-    <a href="#" class="btn">Close</a>
-  </div>
-
 </div> 
    <div class="userstopdetail">   
    <p class="user" data-toggle="modal" href="#<%= proverbe.user.username %>">
-    		<%= proverbe.user.username%>
+    		<%= proverbe.user.name%>
    </p>
    <span class="timestamp"> <i class="icon-time"></i>
 أرسل من حوالي <%= time_ago_in_words(proverbe.created_at)%>.
@@ -44,20 +40,19 @@
 		<%= link_to proverbe.Corps, proverbe %>
     </p>
   
-  <% if current_user = proverbe.user %>
+  <% if proverbe.user == current_user %>
     <%= link_to "حذف", proverbe, :method =>  :delete,
                                      :confirm=> "هل أنت متأكد",
                                      :title=>    proverbe.Corps %>
 
- <%= link_to "تحديث المثل", edit_proverbe_path(proverbe) %> 
+ <%= link_to "تحديث المثل", edit_proverbe_path(proverbe) %>                                                          
+
+
+<% end %>
 
 <%= link_to "عدد التعليقات", proverbe_path(proverbe.id) + "#disqus_thread" %>
 
 <%= raw(disqus_comment_counts) %>
-                                                           
-
-
-<% end %>
 	
 </li>
 
