--- a/app/views/proverbes/show.html.erb
+++ b/app/views/proverbes/show.html.erb
@@ -1,7 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>المحتوى : </b>
+
+<b>  المحتوى : </b>
   <%= @proverbe.Corps %>
 </p>
 
@@ -10,6 +11,7 @@
 </p>
 
 
-
+<% if @proverbe.user == current_user %>
 <%= link_to 'تحديث', edit_proverbe_path(@proverbe) %> |
+<% end %>
 <%= link_to 'الرجوع', root_path %>
