--- a/app/views/proverbes/index.html.erb
+++ b/app/views/proverbes/index.html.erb
@@ -39,13 +39,16 @@
     <p class="corps">
 		<%= link_to proverbe.Corps, proverbe %>
     </p>
+
+
   
-  <% if proverbe.user == current_user %>
+  
+<% if proverbe.user == current_user %>
     <%= link_to "حذف", proverbe, :method =>  :delete,
                                      :confirm=> "هل أنت متأكد",
                                      :title=>    proverbe.Corps %>
 
- <%= link_to "تحديث المثل", edit_proverbe_path(proverbe) %>                                                          
+    <%= link_to "تحديث المثل", edit_proverbe_path(proverbe) %>                                                          
 
 
 <% end %>
@@ -53,7 +56,11 @@
 <%= link_to "عدد التعليقات", proverbe_path(proverbe.id) + "#disqus_thread" %>
 
 <%= raw(disqus_comment_counts) %>
+
+<a href="https://twitter.com/share" class="twitter-share-button" data-text="<%= proverbe.Corps %>" data-via=<%= proverbe.user.username %> data-lang="fr">Tweeter</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 	
+
 </li>
 
 
