--- a/app/views/proverbes/show.html.erb
+++ b/app/views/proverbes/show.html.erb
@@ -5,6 +5,10 @@
 <b>  المحتوى : </b>
   <%= @proverbe.Corps %>
 </p>
+<% tag_cloud(@tags, %w(css1 css2 css3 css4)) do |tag, css_class| %>
+  
+  <%=  link_to tag.name, proverbes_path(:view =>'tag', :tag => tag.name)%>
+<% end %>
 
 <a href="https://twitter.com/share" class="twitter-share-button" data-text="<%= @proverbe.Corps %>" data-via=<%= @proverbe.user.username %> data-lang="fr">Tweeter</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
