--- a/app/views/proverbes/show.html.erb
+++ b/app/views/proverbes/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
 
-<h3>  المحتوى : </h3>
+<h3>  المثل : </h3>
 </p>
  <h4>  <%= @proverbe.Corps %><h4> 
 </p>
@@ -14,7 +14,7 @@
 </p>
 <h4>  <%= @proverbe.proverbe_sens %>
 </p>
-<h3>  المسومات : </h3>
+<h3>  الأوسمة : </h3>
 </p>
 <% tag_cloud(@tags, %w(css1 css2 css3 css4)) do |tag, css_class| %>
   <a class="btn btn-primary" href=<%= proverbes_path(:view =>'tag', :tag => tag.name)%>> <%= tag.name %></a>
@@ -22,7 +22,7 @@
 </p>
 <h3>  انشر المثل : </h3>
 </p>
-<a href="https://twitter.com/share" class="twitter-share-button" data-url= "http://artproverbesrails1.heroku.com/proverbes/<%=@proverbe.id%>" data-text="<%= @proverbe.Corps %>" data-via=<%= @proverbe.user.username %> data-lang="ar" data-size="large">تغريد</a>
+<a href="https://twitter.com/share" class="twitter-share-button" data-url= "http://artproverbesrails1.heroku.com/proverbes/<%=@proverbe.id%>" data-text="<%= @proverbe.Corps %>  ‎‫#حكم‬‏ ‎‫#درر‬‏ ‎‪#drr" data-via=<%= @proverbe.user.username %> data-lang="ar" data-size="large">تغريد</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 	
 
