--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,8 +4,8 @@
   </small>
   <nav>
     <ul>
-      <li><%= link_to "من نحن",   '#' %></li>
-      <li><%= link_to "اتصل بنا", '#' %></li>
+      <li><%= link_to "من نحن",   '/about' %></li>
+      <li><%= link_to "اتصل بنا", '/contact' %></li>
       </ul>
   </nav>
 </footer>
