--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,2 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<h1>الإتصال بنا</h1>
+<p>للإتصال بنا يمكن مراسلتنا على الإيميل : daade.org@gmail.com </p>
