--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,10 +1,11 @@
 <h1>من نحن</h1>
-<p>الضاد عبارة عن فريق مكون من ثلاثة شبان سقطو منذ سنوات في شباك الإعلام اﻵلي و الهاكينك و اﻵن همهم الوحيد هو تطوير و نشر الإعلام اﻵلي باللغة العربية. هدفنا هو ليس تجاري بالدرجة اﻷولى و لكن نهدف لتبادل الخبرات في مجالات البرمجة و التقنيات المفتوحة و تطويرها باللغة العربية.
+<p>الضاد عبارة عن فريق مكون من ثلاثة شبان سقطو منذ سنوات في غرام الإعلام اﻵلي و الهاكينك و اﻵن همهم الوحيد هو تطوير و نشر الإعلام اﻵلي باللغة العربية. هدفنا هو  ليس تجاري بالدرجة اﻷولى و لكن نهدف لتبادل الخبرات في مجالات البرمجة و التقنيات المفتوحة و تطويرها باللغة العربية لغة الضاد.
 
 <h2>الفريق الضادي</h2>
 <ul>
-<li>خالد وافي : ouafi.khaled@gmail.com</li>
-<li>طيب مرابطي: tayeb.merabti@gmail.com</li>
-<li>أمين وافي: amine2ouafi@gmail.com</li>
+<li>خالد الضادي (dkode)</li>
+<li>طيب مرابطي ( <a href="tayeb83.github.com/dtmdeblog">مدونة الطيب الضادي</a>
+)</li>
+<li>أمين الضادي</li>
 </ul>
 </p>
